# gpt-json

./: .git-blame-ignore-revs  .gitignore  LICENSE  README.md  lint.sh  pyproject.toml
.circleci/: config.yml
.github/workflows/: deploy.yml  lint.yml
examples/: README.md  claud_example.py  claude_example.py  example.py  format_contextaware_example.py  function_example.py  hint_example.py  pyproject.toml  stream_example.py  template_example.py  test_goblins.py  truncation_example.py  utils.py
examples/raw_data/: long_text.txt
gpt_json/: __init__.py  common.py  exceptions.py  fn_calling.py  generics.py  gpt.py  gpt_function.py  gpt_test.py  models.py  parsers.py  prompts.py  stream_json.py  streaming.py  token_utils.py  transformations.py  truncation.py  types_oai.py  types_streaming.py
gpt_json/tests/: conftest.py  shared.py  test_api.py  test_fixtures.py  test_fn_calling.py  test_gpt.py  test_models.py  test_parsers.py  test_prompts.py  test_streaming.py  test_transformations.py  test_truncation.py
gpt_json/tests/utils/: streaming_utils.py  test_streaming_utils.py
