[tool.poetry]
name = "gpt-json"
version = "0.1.10"
description = "Structured and typehinted GPT responses in Python."
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"
packages = [{include = "gpt_json"}]

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "^0.3.3"
openai = "^0.27.6"
pydantic = "^1.10.7"
backoff = "^2.2.1"
anthropic = "^0.2.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
pytest-asyncio = "^0.21.0"
autoflake = "^2.1.1"
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
