[tool.poetry]
name = "gpt-json"
version = "0.4.2"
description = "Structured and typehinted GPT responses in Python."
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"
packages = [{ include = "gpt_json" }]

[tool.poetry.dependencies]
python = "^3.11"
tiktoken = "^0.3.3"
openai = "^0.27.6"
pydantic = ">2.0.0, <3.0.0"
backoff = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
pytest-asyncio = "^0.21.0"
autoflake = "^2.1.1"
black = "^23.3.0"
mypy = "^1.3.0"
types-setuptools = "^68.1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
