[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gpt_json = { path = "/Users/piercefreeman/projects/gpt-json", develop = true }
python-dotenv = "^1.0.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
