[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
gpt_json = { path = "../", develop = true }
python-dotenv = "^1.0.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
